@@ -22,6 +22,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   system such as GNU/Linux where directory ACL umasks override process umasks.
   [bug introduced in coreutils-6.0]
 
+  mv will now replace empty directories in the destination with directories
+  from the source, when copying across file systems.
+  [This bug was present in "the beginning".]
+
   od -wN with N larger than 64K on a system with 32-bit size_t would
   print approximately 2*N bytes of extraneous padding.
   [Bug introduced in coreutils-7.0]
